
syntax = "proto3";


//This is the only message we send and recieve
//MessageType lets us determine how to unpack the bytes portion.
message GenericMessage {
  enum MessageTypeEnum {
    GAME_STATE_UPDATE = 0;
    SHIP_UPDATE = 1;
    JOIN_GAME = 2;
    SET_TEAM_AND_SHIP = 3;
    
  }
  MessageTypeEnum messageType = 1;
  bytes data = 2;
}

// Our list of ships
message GameState {
  //Updates for pretty much all non-static game objects
  repeated Ship ships = 1;
  repeated Bullet bullets = 2;
  repeated Score scores = 3;
  repeated SetTeamAndShip setTeamAndShip = 4;
  repeated PlayerJoin playersJoining = 5;
  repeated int32 PlayerLeave = 6;
}

message PlayerJoin {
  int32 id = 1;
  string userName = 2;
}

message Score {
  int32 id = 1;
  int32 kills = 2;
  int32 deaths = 3;
  int32 assists = 4;
  int32 goals = 5;
}

enum BulletType {
  NORMAL = 0;
}

//State for both Bullet and Ship
enum State {
  SPAWN = 0;
  ALIVE = 1;
  DEAD = 2;    
  INVULN = 3;
  //TODO do I need destroy in addition to DEAD ?
  DESTROY = 4;  
  //TODO add more  
}

message Bullet {
  int32 id = 1;
  int32 ownerId = 2;  
  BulletType type = 3;
  State state = 4;
  float xPos = 5;
  float yPos = 6;
  float xVel = 7;
  float yVel = 8;  
}

message Ship {
  int32 id = 1;  
  State state = 2;
  float xPos = 3;
  float yPos = 4;
  float xVel = 5;
  float yVel = 6;  
  float rot = 7;  //rotation of ship
  float rotVel = 8; //velocity of the ships rotaiton
  int32 health = 9; //remaining health of ship
}

//TODO Should be a packed byte instead of a bool
message ShipUpdate
{
  bool rotLeft = 1;
  bool rotRight = 2;
  bool thrust = 3;
  bool ability1 = 4;
  bool ability2 = 5;
}

message JoinGame
{
  int32 gameId = 1;
}

enum ShipTypeEnum {    
    HEAVY = 0;
    FORWARD = 1;
    SCOUT = 2;
    // Medic
    // Engineer
    // Spy
  }

message SetTeamAndShip 
{
  int32 team = 1;  
  ShipTypeEnum shipType = 2;
}

message UpdateTeamAndShip
{
  int32 id = 1;
  int32 team = 2;
  ShipTypeEnum shipType = 3;
}

message Login
{
  string userName = 1;
  string password = 2;
}